tests/baselines/reference/typeReferenceDirectives3(strict=true).errors.txt
/ref.d.ts(1,15): error TS7008: Member 'x' implicitly has an 'any' type.


==== /app.ts (0 errors) ====
    /// <reference types="lib" preserve="true" />
    /// <reference path="ref.d.ts" />
    interface A {
        x: () => $
    }
==== /ref.d.ts (1 errors) ====
    interface $ { x }
                  ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    
==== /types/lib/index.d.ts (0 errors) ====
    declare let $: { x: number }
    